# blog

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
mysite/: settings.py  urls.py
mysite/static/bootstrap/css/: bootstrap.css  bootstrap1.css
mysite/static/css/: admin.css  bootstrap.css  style.css
news/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
news/fixtures/: test_category.json  test_user.json
news/migrations/: 0001_initial.py  0002_alter_news_options_alter_news_content_and_more.py  0003_category_news_category.py  0004_alter_news_category.py  0005_news_views.py  0006_alter_news_is_published.py
news/templates/news/: add_news.html  contact.html  list_of_news.html  login.html  register.html  single.html
news/templatetags/: news_tags.py
static/bootstrap/css/: bootstrap-grid.css  bootstrap.css
static/css/: bootstrap.css  style.css
templates/: base.html
templates/admin/: base_site.html
templates/inc/: _footer.html  _header.html  _nav.html  _pagination.html  _sidebar.html
