[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["BaurNN <studentsoftpu@gmail.com>"]
packages = [
    {include = "mysite"},
]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.6"
dj-database-url = "^0.5.0"
python-dotenv = "^0.20.0"
gunicorn = "^20.1.0"
psycopg2= "^2.9.3"
whitenoise = "6.2.0"
django-debug-toolbar="^3.5.0"
django-ckeditor="^6.4.2"
django-simple-captcha="^0.5.17"
coverage="^6.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
